--- a/index.html
+++ b/index.html
@@ -176,5 +176,10 @@
         }
     </script>
 
+ </div>
+    </section>
+<body>
+    <p>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento: </p>
+    <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
 </body>
 </html>
