--- a/index.html
+++ b/index.html
@@ -179,7 +179,11 @@
  </div>
     </section>
 <body>
-    <p>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento: </p>
+<section class="section calculator">
+        <h2>🧮 Calculadora de Compras</h2>;;
+    
+ <div class="calculator">
+            <h3>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento: </h3>
     <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
 </body>
 </html>
