--- a/compras.html
+++ b/compras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoAlimentos - Lista de Compras</title>
+    <title>Lista de Compras</title>
     <style>
         body {
             font-family: Arial, sans-serif;
