--- a/index.html
+++ b/index.html
@@ -179,13 +179,14 @@
  </div>
     </section>
 <body>
-<section class="section calculator">
-    <h2>🛒 Calculadora de Compras</h2>
-    <div class="calculator">
-        <h3>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento:</h3>
-        <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
-    </div>
-</section>
+    <!-- Seção da calculadora de compras -->
+    <section class="section calculator">
+        <h2>🛒 Calculadora de Compras</h2>
+        <div class="calculator">
+            <h3>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento:</h3>
+            <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
+        </div>
+    </section>
 
 </body>
 </html>
