--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
         </ul>
     </section>
 
+    <section class="section">
+        <h2>Prevenção de Doenças Comuns 🚑</h2>
+        <div class="diseases">
+            <h3>1. Hipertensão (Pressão Alta)</h3>
+            <p>A hipertensão é muitas vezes chamada de "assassino silencioso". Mantenha a pressão arterial sob controle com a prática de atividades físicas regulares, dieta balanceada e evitando o consumo excessivo de sal.</p>
+
+            <h3>2. Diabetes Tipo 2</h3>
+            <p>A diabetes tipo 2 é uma condição em que o corpo não consegue usar adequadamente a insulina. Prevenção envolve alimentação saudável, controle do peso e atividade física constante.</p>
+
+            <h3>3. Doenças Cardiovasculares</h3>
+            <p>Manter uma dieta saudável, praticar exercícios e evitar fumar são as melhores formas de prevenir doenças cardíacas. Controlar o colesterol e a pressão arterial também é essencial.</p>
+
+            <h3>4. Doenças Respiratórias</h3>
+            <p>Para prevenir doenças respiratórias, como a asma, evite poluentes, procure um ambiente com boa ventilação e realize exercícios respiratórios regularmente.</p>
+        </div>
+    </section>
+
     <section class="section calculator">
         <h2>🧮 Calculadoras de Saúde</h2>
 
@@ -50,87 +67,19 @@
             <p id="resultadoAgua"></p>
         </div>
 
-        <!-- Calculadora de IMC -->
-        <div class="calculator">
-            <h3>📏 Cálculo do IMC (Índice de Massa Corporal)</h3>
-            <label>Peso (kg):</label>
-            <input type="number" id="pesoIMC" placeholder="Digite seu peso">
-            <label>Altura (cm):</label>
-            <input type="number" id="alturaIMC" placeholder="Digite sua altura em cm">
-            <button onclick="calcularIMC()">Calcular</button>
-            <p id="resultadoIMC"></p>
-        </div>
-
-        <!-- Calculadora de Calorias Diárias -->
-        <div class="calculator">
-            <h3>🔥 Calculadora de Calorias Diárias</h3>
-            <label>Peso (kg):</label>
-            <input type="number" id="pesoCalorias" placeholder="Digite seu peso">
-            <label>Altura (cm):</label>
-            <input type="number" id="alturaCalorias" placeholder="Digite sua altura em cm">
-            <label>Idade:</label>
-            <input type="number" id="idadeCalorias" placeholder="Digite sua idade">
-            <label>Gênero:</label>
-            <select id="generoCalorias">
-                <option value="masculino">Masculino</option>
-                <option value="feminino">Feminino</option>
-            </select>
-            <button onclick="calcularCalorias()">Calcular</button>
-            <p id="resultadoCalorias"></p>
-        </div>
-    </section>
-
-    <script>
-        // Função para calcular a ingestão diária de água
-        function calcularAgua() {
-            let peso = document.getElementById("pesoAgua").value;
-            if (peso) {
-                let agua = (peso * 35) / 1000; // Fórmula de cálculo de ingestão de água
-                document.getElementById("resultadoAgua").innerText = `Você deve beber cerca de ${agua.toFixed(2)} litros de água por dia. 💧`;
-            } else {
-                document.getElementById("resultadoAgua").innerText = "Informe seu peso corretamente.";
-            }
-        }
-
-        // Função para calcular o IMC
-        function calcularIMC() {
-            let peso = document.getElementById("pesoIMC").value;
-            let altura = document.getElementById("alturaIMC").value;
-            if (peso && altura) {
-                altura = altura / 100; // Convertendo altura para metros
-                let imc = peso / (altura * altura);
-                let categoria = "";
-                if (imc < 18.5) categoria = "Abaixo do peso";
-                else if (imc >= 18.5 && imc < 24.9) categoria = "Peso normal";
-                else if (imc >= 25 && imc < 29.9) categoria = "Sobrepeso";
-                else categoria = "Obesidade";
-                document.getElementById("resultadoIMC").innerText = `Seu IMC é ${imc.toFixed(2)}. Categoria: ${categoria}`;
-            } else {
-                document.getElementById("resultadoIMC").innerText = "Informe o peso e a altura corretamente.";
-            }
-        }
-
-        // Função para calcular as calorias diárias
-        function calcularCalorias() {
-            let peso = document.getElementById("pesoCalorias").value;
-            let altura = document.getElementById("alturaCalorias").value;
-            let idade = document.getElementById("idadeCalorias").value;
-            let genero = document.getElementById("generoCalorias").value;
-
-            if (peso && altura && idade) {
-                let tmb;
-                if (genero === "masculino") {
-                    tmb = 88.362 + (13.397 * peso) + (4.799 * altura) - (5.677 * idade);
+        <script>
+            // Função para calcular a ingestão diária de água
+            function calcularAgua() {
+                let peso = document.getElementById("pesoAgua").value;
+                if (peso) {
+                    let agua = (peso * 35) / 1000; // Fórmula de cálculo de ingestão de água
+                    document.getElementById("resultadoAgua").innerText = `Você deve beber cerca de ${agua.toFixed(2)} litros de água por dia. 💧`;
                 } else {
-                    tmb = 447.593 + (9.247 * peso) + (3.098 * altura) - (4.330 * idade);
+                    document.getElementById("resultadoAgua").innerText = "Informe seu peso corretamente.";
                 }
-                let calorias = tmb * 1.2; // Multiplicando pelo fator de atividade (moderada)
-                document.getElementById("resultadoCalorias").innerText = `Você deve consumir aproximadamente ${calorias.toFixed(2)} calorias por dia.`;
-            } else {
-                document.getElementById("resultadoCalorias").innerText = "Por favor, preencha todos os campos corretamente.";
             }
-        }
-    </script>
+        </script>
+    </section>
 
     <section class="section calculator">
         <h2>🛒 Calculadora de Compras</h2>
