--- a/index.html
+++ b/index.html
@@ -55,6 +55,33 @@
         </div>
     </section>
 
+    <section class="section">
+        <h2>Saúde Mental: A Importância do Equilíbrio Emocional 🧠</h2>
+        <div class="mental-health">
+            <h3>Dicas para Cuidar da Sua Mente:</h3>
+            <ul>
+                <li><strong>Pratique a meditação:</strong> A meditação é uma ótima maneira de reduzir o estresse e melhorar o foco mental.</li>
+                <li><strong>Durma o suficiente:</strong> Dormir entre 7 a 8 horas por noite é fundamental para manter a saúde mental em equilíbrio.</li>
+                <li><strong>Converse com alguém:</strong> Falar com amigos, familiares ou até um terapeuta pode ajudar a aliviar o peso emocional.</li>
+                <li><strong>Evite o isolamento:</strong> Interaja com outras pessoas, mantenha relações sociais e participe de atividades comunitárias.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="section">
+        <h2>Receitas Saudáveis para o Seu Bem-Estar 🍏</h2>
+        <div class="healthy-recipes">
+            <h3>Receita 1: Salada Colorida de Quinoa 🥗</h3>
+            <p>Uma refeição nutritiva e cheia de fibras! Prepare a quinoa e misture com tomate, pepino, cenoura, pimentão e ervas frescas. Tempere com azeite e limão. Uma excelente opção para o almoço.</p>
+
+            <h3>Receita 2: Smoothie Verde Energético 🍹</h3>
+            <p>Uma bebida refrescante e cheia de nutrientes. Bata espinafre, abacaxi, maçã, gengibre e um pouco de água de coco para um smoothie delicioso e saudável.</p>
+
+            <h3>Receita 3: Frango Grelhado com Legumes 🍗</h3>
+            <p>Um prato saudável e fácil de fazer. Grelhe peito de frango e acompanhe com legumes assados (cenoura, abobrinha, brócolis). A combinação ideal para uma alimentação equilibrada.</p>
+        </div>
+    </section>
+
     <section class="section calculator">
         <h2>🧮 Calculadoras de Saúde</h2>
 
@@ -67,27 +94,97 @@
             <p id="resultadoAgua"></p>
         </div>
 
-        <script>
-            // Função para calcular a ingestão diária de água
-            function calcularAgua() {
-                let peso = document.getElementById("pesoAgua").value;
-                if (peso) {
-                    let agua = (peso * 35) / 1000; // Fórmula de cálculo de ingestão de água
-                    document.getElementById("resultadoAgua").innerText = `Você deve beber cerca de ${agua.toFixed(2)} litros de água por dia. 💧`;
-                } else {
-                    document.getElementById("resultadoAgua").innerText = "Informe seu peso corretamente.";
-                }
-            }
-        </script>
-    </section>
-
-    <section class="section calculator">
-        <h2>🛒 Calculadora de Compras</h2>
+        <!-- Calculadora de IMC -->
         <div class="calculator">
-            <h3>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento:</h3>
-            <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
+            <h3>📏 Cálculo do IMC (Índice de Massa Corporal)</h3>
+            <label>Peso (kg):</label>
+            <input type="number" id="pesoIMC" placeholder="Digite seu peso">
+            <label>Altura (cm):</label>
+            <input type="number" id="alturaIMC" placeholder="Digite sua altura em cm">
+            <button onclick="calcularIMC()">Calcular</button>
+            <p id="resultadoIMC"></p>
+        </div>
+
+        <!-- Calculadora de Calorias Diárias -->
+        <div class="calculator">
+            <h3>🔥 Calculadora de Calorias Diárias</h3>
+            <label>Peso (kg):</label>
+            <input type="number" id="pesoCalorias" placeholder="Digite seu peso">
+            <label>Altura (cm):</label>
+            <input type="number" id="alturaCalorias" placeholder="Digite sua altura em cm">
+            <label>Idade:</label>
+            <input type="number" id="idadeCalorias" placeholder="Digite sua idade">
+            <label>Gênero:</label>
+            <select id="generoCalorias">
+                <option value="masculino">Masculino</option>
+                <option value="feminino">Feminino</option>
+            </select>
+            <button onclick="calcularCalorias()">Calcular</button>
+            <p id="resultadoCalorias"></p>
         </div>
     </section>
 
+    <script>
+        // Função para calcular a ingestão diária de água
+        function calcularAgua() {
+            let peso = document.getElementById("pesoAgua").value;
+            if (peso) {
+                let agua = (peso * 35) / 1000; // Fórmula de cálculo de ingestão de água
+                document.getElementById("resultadoAgua").innerText = Você deve beber cerca de ${agua.toFixed(2)} litros de água por dia. 💧;
+            } else {
+                document.getElementById("resultadoAgua").innerText = "Informe seu peso corretamente.";
+            }
+        }
+
+        // Função para calcular o IMC
+        function calcularIMC() {
+            let peso = document.getElementById("pesoIMC").value;
+            let altura = document.getElementById("alturaIMC").value;
+            if (peso && altura) {
+                altura = altura / 100; // Convertendo altura para metros
+                let imc = peso / (altura * altura);
+                let categoria = "";
+                if (imc < 18.5) categoria = "Abaixo do peso";
+                else if (imc >= 18.5 && imc < 24.9) categoria = "Peso normal";
+                else if (imc >= 25 && imc < 29.9) categoria = "Sobrepeso";
+                else categoria = "Obesidade";
+                document.getElementById("resultadoIMC").innerText = Seu IMC é ${imc.toFixed(2)}. Categoria: ${categoria};
+            } else {
+                document.getElementById("resultadoIMC").innerText = "Informe o peso e a altura corretamente.";
+            }
+        }
+
+        // Função para calcular as calorias diárias
+        function calcularCalorias() {
+            let peso = document.getElementById("pesoCalorias").value;
+            let altura = document.getElementById("alturaCalorias").value;
+            let idade = document.getElementById("idadeCalorias").value;
+            let genero = document.getElementById("generoCalorias").value;
+
+            if (peso && altura && idade) {
+                let tmb;
+                if (genero === "masculino") {
+                    tmb = 88.362 + (13.397 * peso) + (4.799 * altura) - (5.677 * idade);
+                } else {
+                    tmb = 447.593 + (9.247 * peso) + (3.098 * altura) - (4.330 * idade);
+                }
+                let calorias = tmb * 1.2; // Multiplicando pelo fator de atividade (moderada)
+                document.getElementById("resultadoCalorias").innerText = Você deve consumir aproximadamente ${calorias.toFixed(2)} calorias por dia.;
+            } else {
+                document.getElementById("resultadoCalorias").innerText = "Por favor, preencha todos os campos corretamente.";
+            }
+        }
+    </script>
+
+ </div>
+    </section>
+<body>
+<section class="section calculator">
+        <h2>🧮 Calculadora de Compras</h2>
+    
+ <div class="calculator">
+            <h3>Calcule o valor das suas compras e mantenha seu bem-estar sem comprometer seu orçamento: </h3>
+
+    <a href="compras.html" class="button">Calcular Valor das Minhas Compras 🛒</a>
 </body>
 </html>
